fix hero image on tablet

--- a/themes/clearvalue/assets/scss/about-us.scss
+++ b/themes/clearvalue/assets/scss/about-us.scss
@@ -364,6 +364,7 @@
       .hero-right {
         right: -7rem;
         top: 26.5%;
+        width: 73%;
         max-width: 43.5rem;
       }
     }
@@ -498,6 +499,7 @@
       .hero-right {
         position: static;
         transform: scale(1.2);
+        width: 100%;
         max-width: 26.785rem;
         margin: -6px auto 0;
       }
